[gd_scene load_steps=7 format=3 uid="uid://b6ts6ot13bxaf"]

[ext_resource type="Script" path="res://scenes/pantalles/grafica.gd" id="1_giybh"]
[ext_resource type="Texture2D" uid="uid://cnmco05ketrpt" path="res://assets/tapete.png" id="2_w3tmy"]
[ext_resource type="Theme" uid="uid://cyhuytd5kxh4y" path="res://tema8bits.tres" id="3_50jt2"]
[ext_resource type="Theme" uid="uid://djm504y55dgem" path="res://label8bitsValors.tres" id="4_05uip"]
[ext_resource type="Theme" uid="uid://uevv2738xj4l" path="res://label8bits.tres" id="5_jlgva"]
[ext_resource type="AudioStream" uid="uid://da1jy70pfbu5n" path="res://assets/TheEntertainer.mp3" id="6_103xb"]

[node name="grafica" type="Node2D"]
script = ExtResource("1_giybh")

[node name="Fons" type="TextureRect" parent="."]
z_index = -1
offset_right = 479.0
offset_bottom = 853.0
texture = ExtResource("2_w3tmy")
expand_mode = 1

[node name="tornar" type="Button" parent="."]
offset_left = 135.0
offset_top = 740.0
offset_right = 239.0
offset_bottom = 764.0
scale = Vector2(2, 2)
theme = ExtResource("3_50jt2")
text = "Tornar"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 421.0
offset_right = 460.0
offset_bottom = 700.0
color = Color(0, 0.294118, 0, 0.819608)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 96.0
offset_right = 462.0
offset_bottom = 375.0
color = Color(1, 1, 1, 0.286275)

[node name="jugades" type="Label" parent="."]
offset_left = 28.0
offset_top = 431.0
offset_right = 348.0
offset_bottom = 463.0
theme = ExtResource("4_05uip")
text = "Partides: "

[node name="jugadesGuanyades" type="Label" parent="."]
offset_left = 25.0
offset_top = 473.0
offset_right = 409.0
offset_bottom = 505.0
theme = ExtResource("5_jlgva")
text = "Guanyades: 1"

[node name="jugadesEmpatades" type="Label" parent="."]
offset_left = 28.0
offset_top = 513.0
offset_right = 412.0
offset_bottom = 545.0
theme = ExtResource("4_05uip")
text = "Empatades: 1"

[node name="JugadesPerdudes" type="Label" parent="."]
offset_left = 30.0
offset_top = 557.0
offset_right = 382.0
offset_bottom = 589.0
theme = ExtResource("5_jlgva")
text = "Perdudes: 1"

[node name="blackjack" type="Label" parent="."]
offset_left = 32.0
offset_top = 597.0
offset_right = 448.0
offset_bottom = 629.0
theme = ExtResource("4_05uip")
text = "BlackJacjs: 1"

[node name="guanys" type="Label" parent="."]
offset_left = 29.0
offset_top = 639.0
offset_right = 445.0
offset_bottom = 671.0
theme = ExtResource("5_jlgva")
text = "MÃ x creds: 10"

[node name="MusicaFons" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_103xb")
autoplay = true

[connection signal="pressed" from="tornar" to="." method="_on_tornar_pressed"]
